# hcore

./: .gitignore  CabalMakefile  Makefile  TODO.txt
cute/: SSequence2D.hs  SStream.hs
darais-fp/: Interact.hs  conventions.txt  darais-fp.cabal  fp-extras.cabal
darais-fp/src/: FP.hs
darais-fp/src/FP/: Classes.hs  Data.hs  PrePrelude.hs  Prelude.hs  Pretty.hs  Util.hs
darais-fp/src/FP/Classes/: CFunctor.hs  Compat.hs  Eq.hs  Functor.hs  HasLens.hs  Lattice.hs  Monad.hs  Monoid.hs  NumS.hs  Ord.hs  PartialOrder.hs  QQ.hs  SNum.hs  SSequence.hs  SSequence2D.hs  Sequence.hs  Sequence2D.hs  Static.hs  ToQQ.hs  Universal.hs
darais-fp/src/FP/Data/: BInt.hs  Bool.hs  Compose.hs  Double.hs  DumbLattice.hs  Either.hs  Ex.hs  Function.hs  Indexed.hs  Lens.hs  LibEq.hs  List.hs  Nat.hs  Peano.hs  Pipeline.hs  Proxy.hs  SInt.hs  SList.hs  SMatrix.hs  SStream.hs  SVector.hs  Stream.hs  String.hs  Tuple.hs  Vector.hs
darais-fp/src/FP/Data/Matrix/: Storable.hs
darais-fp/src/FP/Data/Nat/: Lte.hs  Nat.hs
darais-fp/src/FP/Data/SMatrix/: Boxed.hs  Classes.hs  Generic.hs  Storable.hs  Unboxed.hs
darais-fp/src/FP/Data/SVector/: Boxed.hs  Generic.hs  Storable.hs  Unboxed.hs
darais-fp/src/FP/Data/Vector/: Boxed.hs  Storable.hs  Unboxed.hs
darais-fp/src/FP/Pretty/: Class.hs  Concrete.hs  Generic.hs  StateSpace.hs
darais-fp/src/FP/Util/: ConsoleState.hs  Error.hs  ParserQQ.hs
darais-fp/tests/: TestPretty.hs
fp-extras/: TestPretty.hs  fp-extras.cabal
fp-extras/src/: FP.hs
fp-extras/src/Classes/: CFunctor.hs  HasLens.hs  Indexed.hs  Injection.hs  Iterable.hs  Lattice.hs  PartialOrder.hs  ToQQ.hs  Traversable.hs  Universal.hs
fp-extras/src/Data/: Compose.hs  Ex.hs  ExI.hs  Lib.hs
fp-extras/src/FPUtil/: Bool.hs  ConsoleState.hs  Double.hs  Either.hs  Function.hs  Functor.hs  List.hs  Monad.hs  Monoid.hs  ParserQQ.hs  String.hs
fp-extras/src/Text/: Pretty.hs
fp-extras/src/Text/Pretty/: Class.hs  Concrete.hs  Generic.hs  StateSpace.hs
gpu-slice/: .exrc  Gen.hi  Gen.hs  GenData.hs  Main.hi  Main.hs  Makefile  Zig.hi  c1.txt  c2.txt  c3.txt  c4.txt  c5.txt  gpu-slice.cabal  p1.txt  p2.txt  p3.txt  p4.txt  p5.txt  report.html  report1.html  s1.txt  s2.txt  s3.txt  s4.txt  s5.txt
gpu-slice/old-code/: Zig.hs
gpu-slice/old-results/: c1.txt  c2.txt  c3.txt  c4.txt  p1.txt  p2.txt  p3.txt  p4.txt  s1.txt  s2.txt  s3.txt  s4.txt
gpu-slice/src/: Bench.hs  Model.hs  RunAcc.hs  RunGPU.hs  RunPar.hs  RunSerial.hs  Stats.hs  Types.hs  Util.hs
int-indexed/: Interact.hs  int-indexed.cabal
int-indexed/src/Classes/: NumI.hs
int-indexed/src/Data/Int/: Indexed.hs
int-indexed/src/Data/Int/Indexed/: BInt.hs  SInt.hs
int-indexed/src/Data/Nat/: Lte.hs
list-indexed/: list-indexed.cabal
list-indexed/src/Data/: L.hs
matrix-indexed/: Interact.hs  matrix-indexed.cabal
matrix-indexed/src/Data/M/: Boxed.hs  Generic.hs  Prim.hs  Storable.hs  WhyDidIImplementThisShit.hs
ml/: Interact.hs  OldShit.hs  ml.cabal  noisy-200.csv  noisy-50.csv  spiral-noisy.csv
ml/src/ML/: Bullshit.hs  Gen.hs  GhettoMultiNormal.hs  MetropolisHastings.hs  MonadGen.hs  Statistics.hs
mplot/: Interact.hs  mplot.cabal
mplot/src/Vis/: Plot.hs
mplot/src/Vis/Plot/: Concrete.hs  Generic.hs  StateSpace.hs
sexp-kit/: sexp-kit.cabal
sexp-kit/Data/: SExp.hs
sexp-kit/Data/SExp/: Data.hs  Parser.hs
vector-indexed/: .exrc  Interact.hs  Makefile  vector-indexed.cabal
vector-indexed/src/Data/V/: Boxed.hs  Generic.hs  Prim.hs  Storable.hs
