author:               David Darais
build-type:           Simple
cabal-version:        >=1.10
category:             Data
license-file:         LICENSE
license:              BSD3
maintainer:           david.darais@gmail.com
name:                 fp-extras
synopsis:             a bunch of useful functional programming types and classes
version:              0.1.0.0

library
  build-depends:        base               == 4.6.*
                      , data-lens          == 2.0.*
                      , data-lens-template == 2.1.*
                      , template-haskell   == 2.8.*
                      , containers         == 0.5.*
                      , mtl                == 2.1.*
                      , ansi-terminal      == 0.6.*
                      , text               == 0.11.*
                      , process            == 1.1.*
                      , MaybeT             == 0.1.*
                      , repa               == 3.2.*
                      , primitive          == 0.5.*
  default-extensions:   ConstraintKinds
                      , DataKinds
                      , ExistentialQuantification
                      , FlexibleContexts
                      , FlexibleInstances
                      , FunctionalDependencies
                      , GADTs
                      , GeneralizedNewtypeDeriving
                      , InstanceSigs
                      , KindSignatures
                      , MagicHash
                      , MultiParamTypeClasses
                      , OverloadedStrings
                      , PolyKinds
                      , RankNTypes
                      , ScopedTypeVariables
                      , TupleSections
                      , TypeFamilies
                      , TypeOperators
                      , TemplateHaskell
  default-language:     Haskell2010
  exposed-modules:      FP
  ghc-options:          -Wall -fno-warn-orphans
  hs-source-dirs:       src
  other-extensions:     UndecidableInstances
