author:              David Darais
build-type:          Simple
cabal-version:       >=1.10
category:            Data
license-file:        LICENSE
license:             BSD3
maintainer:          david.darais@gmail.com
name:                fp-extras
synopsis:            a bunch of useful functional programming types and classes
version:             0.1.0.0

library
  build-depends:       base               == 4.6.*
                     , data-lens-fd       == 2.0.*
                     , data-lens-template == 2.1.*
                     , template-haskell   == 2.8.*
                     , containers         == 0.5.*
                     , mtl                == 2.1.*
                     , ansi-terminal      == 0.6.*
                     , text               == 0.11.*
                     , process            == 1.1.*
  default-language:    Haskell2010
  exposed-modules:     Classes.CFunctor
                     , Classes.HasLens
                     , Classes.Indexed
                     , Classes.Injection
                     , Classes.Iterable
                     , Classes.Lattice
                     , Classes.PartialOrder
                     , Classes.ToQQ
                     , Classes.Traversable
                     , Classes.Universal
                     , Data.Compose
                     , Data.Ex
                     , Data.ExI
                     , Data.Lib
                     , FP
                     , FPUtil.Bool
                     , FPUtil.ConsoleState
                     , FPUtil.Function
                     , FPUtil.Functor
                     , FPUtil.List
                     , FPUtil.Monad
                     , FPUtil.Monoid
                     , FPUtil.ParserQQ
                     , FPUtil.String
                     , Text.Pretty
                     , Text.Pretty.Class
                     , Text.Pretty.Concrete
                     , Text.Pretty.Generic
                     , Text.Pretty.StateSpace
  hs-source-dirs:      src
