author:              David Darais
build-type:          Simple
cabal-version:       >=1.10
license-file:        LICENSE
license:             BSD3
maintainer:          david.darais@gmail.com
name:                gpu-slice
version:             0.1.0.0

Flag SuperOpt
  Default: False

library
  build-depends:       accelerate              == 0.14.*
                     , accelerate-cuda         == 0.14.*
                     , accelerate-io           == 0.14.*
                     , base                    == 4.6.*
                     , bytestring              == 0.10.*
                     , cereal                  == 0.4.*
                     , deepseq                 == 1.3.*
                     , deepseq-th              == 0.1.*
                     , mtl                     == 2.1.*
                     , mwc-random              == 0.13.*
                     , primitive               == 0.5.*
                     , random                  == 1.0.*
                     , repa                    == 3.2.*
                     , statistics              == 0.10.*
                     , vector                  == 0.10.*
                     , vector-binary-instances == 0.2.*
                     -- , math-functions >=0.1 && <0.2
                     -- , process >=1.1 && <1.2
  default-extensions:  FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , NoMonomorphismRestriction
                     , RankNTypes
                     , ScopedTypeVariables
                     , TemplateHaskell
                     , TypeFamilies
                     , TypeOperators
                     , TypeSynonymInstances
                     , ViewPatterns
  default-language:    Haskell2010
  exposed-modules:     Model, Stats, Types, Util
  if flag(superopt)
    ghc-options:         -Wall -rtsopts -threaded -auto-all
                         -Odph -fno-liberate-case 
                         -funfolding-use-threshold1000 
                         -funfolding-keeness-factor1000 
                         -fllvm -optlo-O3
  else
    ghc-options:         -Wall -rtsopts -threaded -auto-all
  hs-source-dirs:      src

executable gpu-slice-bench
  build-depends:       base      == 4.6.*
                     , criterion == 0.8.*
                     , gpu-slice == 0.1.*
                     , mtl       == 2.1.*
                     , vector    == 0.10.*
                     , repa                    == 3.2.*
  default-language:    Haskell2010
  if flag(superopt)
    ghc-options:         -Wall -rtsopts -threaded
                         -Odph -fno-liberate-case 
                         -funfolding-use-threshold1000 
                         -funfolding-keeness-factor1000 
                         -fllvm -optlo-O3
  else
    ghc-options:         -Wall -rtsopts -threaded
  main-is:             src/Bench.hs

-- executable gpu-slice-serial
--   build-depends:       base      == 4.6.*
--                      , gpu-slice == 0.1.*
--   default-language:    Haskell2010
--   if flag(superopt)
--     ghc-options:         -Wall -rtsopts -threaded
--                          -Odph -fno-liberate-case 
--                          -funfolding-use-threshold1000 
--                          -funfolding-keeness-factor1000 
--   else
--     ghc-options:         -Wall -rtsopts -threaded
--   main-is:             src/RunSerial.hs
-- 
-- executable gpu-slice-par
--   build-depends:       base      == 4.6.*
--                      , gpu-slice == 0.1.*
--   default-language:    Haskell2010
--   ghc-options:         -Wall -rtsopts -threaded
--                        -Odph -fno-liberate-case 
--                        -funfolding-use-threshold1000 
--                        -funfolding-keeness-factor1000 
--   main-is:             src/RunPar.hs
-- 
-- executable gpu-slice-gpu
--   build-depends:       base      == 4.6.*
--                      , gpu-slice == 0.1.*
--   default-language:    Haskell2010
--   if flag(superopt)
--     ghc-options:         -Wall -rtsopts -threaded
--                          -Odph -fno-liberate-case 
--                          -funfolding-use-threshold1000 
--                          -funfolding-keeness-factor1000 
--   else
--     ghc-options:         -Wall -rtsopts -threaded
--   main-is:             src/RunGPU.hs
