author:              David Darais
build-type:          Simple
cabal-version:       >=1.10
category:            Data
license-file:        LICENSE
license:             BSD3
maintainer:          david.darais@gmail.com
name:                int-indexed
synopsis:            newtyped int values indexed by type level nats
version:             0.1.0.0

library
  build-depends:       base == 4.6.*
                     , fp-extras == 0.1.*
  default-language:    Haskell2010
  exposed-modules:     Classes.NumI
                     , Data.Int.Indexed
                     , Data.Int.Indexed.BInt
                     , Data.Int.Indexed.SInt
                     , Data.Nat.Lte
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
