author:              David Darais
build-type:          Simple
cabal-version:       >=1.10
category:            Data
license-file:        LICENSE
license:             BSD3
maintainer:          david.darais@gmail.com
name:                list-indexed
synopsis:            lists indexed by their length
version:             0.1.0.0

library
  build-depends:       base == 4.6.*
  default-language:    Haskell2010
  exposed-modules:     Data.L
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
