author:              David Darais
build-type:          Simple
cabal-version:       >=1.10
category:            Data
license-file:        LICENSE
license:             BSD3
maintainer:          david.darais@gmail.com
name:                matrix-indexed
synopsis:            Matricies indexed by their dimension
version:             0.1.0.0

library
  build-depends:       base           == 4.6.*
                     , vector-indexed == 0.1.*
                     , fp-extras      == 0.1.*
                     , int-indexed    == 0.1.*
                     , text           == 0.11.*
                     , hmatrix        == 0.15.*
                     , vector         == 0.10.*
                     , list-indexed   == 0.1.*
  default-language:    Haskell2010
  exposed-modules:     Data.M.Boxed
                     , Data.M.Generic
                     , Data.M.Prim
                     , Data.M.Storable
  hs-source-dirs:      src
