author:              David Darais
build-type:          Simple
cabal-version:       >=1.10
category:            Math
license-file:        LICENSE
license:             BSD3
maintainer:          david.darais@gmail.com
name:                ml
synopsis:            machine learning algorithms
version:             0.1.0.0

library
  build-depends:       base == 4.6.*
                     , statistics == 0.10.*
                     , vector == 0.10.*
                     , bytestring == 0.10.*
                     , containers == 0.5.*
                     , mwc-random == 0.13.*
                     , fp-extras == 0.1.*
                     , mplot == 0.1.*
                     , vector-indexed == 0.1.*
                     , matrix-indexed == 0.1.*
                     , list-indexed   == 0.1.*
                     , int-indexed    == 0.1.*
                     , csv            == 0.1.*

  default-language:    Haskell2010
  exposed-modules:     ML.Gen, ML.Statistics, ML.MonadGen, ML.Bullshit
  hs-source-dirs:      src
  ghc-options:        -O2
