author:              David Darais
build-type:          Simple
cabal-version:       >=1.10
category:            Data
license-file:        LICENSE
license:             BSD3
maintainer:          david.darais@gmail.com
name:                vector-indexed
synopsis:            vectors indexed by natural numbers
version:             0.1.0.0

library
  build-depends:       base         == 4.6.* 
                     , fp-extras    == 0.1.*
                     , vector       == 0.10.*
                     , list-indexed == 0.1.*
                     , int-indexed  == 0.1.*
  default-language:    Haskell2010
  exposed-modules:     Data.V.Boxed, Data.V.Generic, Data.V.Prim
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
